[package]
authors = ["Kenan Sulayman <kenan@sly.mn>"]
name = "eye_of_providence"
version = "0.1.0"

[dependencies]
afterparty = "0.2.0"
env_logger = "0.4.2"
hyper = "^0.9"
json = "0.11.13"
log = "0.4.6"
regex = "1.1.0"
rouille = "2.1.0"
scoped_threadpool = "0.1.7"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
telegram-bot = "0.6.1"
tokio-core = "0.1.17"
url = "1.7.2"
urlshortener = "0.6.2"

[profile]

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
