[package]
authors = ["Kenan Sulayman <kenan@sly.mn>"]
name = "eye_of_providence"
version = "0.1.0"

[dependencies]
afterparty-ng = "0.4.2"
env_logger = "0.6.1"
futures = "0.1.25"
htmlescape = "0.3.1"
hyper = "^0.10"
json = "0.11.13"
log = "0.4.6"
regex = "1.1.2"
rouille = "3.0.0"
scoped_threadpool = "0.1.9"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
telegram-bot = "0.6.1"
tokio-core = "0.1.17"
url = "1.7.2"

[profile]

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
