[package]
authors = ["Kenan Sulayman <kenan@sly.mn>"]
name = "eye_of_providence"
version = "0.1.0"
edition = "2018"

[dependencies]
afterparty-ng = "0.4.2"
env_logger = "^0.10"
futures = "^0.3"
htmlescape = "^0.3"
hyper = "^0.10"
json = "^0.12"
log = "^0.4"
regex = "^1.1"
rouille = "^3.0"
scoped_threadpool = "^0.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
telegram-bot = "0.6.1"
tokio-core = "^0.1"
url = "^1.7"
serde_qs = "^0.12"
hyper-native-tls = "^0.3"

[profile]

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "abort"
rpath = false
